# BioinspiredAI

./: README.md
GA/: draw_graph.py  hyperparameters.txt  notes.txt  param.py  sga.py  sin.txt
GA/src/: LinReg.py  draw_graph.py  fitness.py  hyperparameters_sga.txt  main.cpp  param.py  run_python.sh  sga.py  test.py
MDVRP/: CMakeLists.txt  config.h  display.py  file.cpp  file.h  ga.cpp  ga.h  individual.cpp  individual.h  main.cpp  problem.cpp  problem.h
MDVRP/tests/: CMakeLists.txt  do_tests.cpp
MOEA/: .gitignore  .notes_brage.txt.swp  CMakeLists.txt  cmake_install.cmake  config.h  dir.h  file.cpp  file.h  ga.cpp  ga.h  individual.cpp  individual.h  kruskal.cpp  kruskal.h  main.cpp  notes_brage.txt  nsga.cpp  nsga.h  objective.cpp  objective.h  prim.cpp  prim.h  slic.cpp  slic.h
MOEA/evaluator/: run.py
MOEA/tests/: CMakeLists.txt  do_tests.cpp
